# combined-ui-mcps

./: .gitignore  CLAUDE.md  Dockerfile  app.py  combined.py  pyproject.toml  run_server.sh
add-service/: Dockerfile  pyproject.toml  run_server.sh  server.py
bak/: combined_good.py  combined_service.py  lifespan.py
greet-service/: pyproject.toml  run_server.sh  server.py
user_settings/: 6f63f57734c74052.json
