[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "add-service"
version = "0.1.0"
description = "Add Numbers MCP Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "uvicorn",
    "starlette",
]

[project.scripts]
add-service = "server:main"
