[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greet-service"
version = "0.1.0"
description = "Greet MCP Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "uvicorn",
    "starlette",
]

[project.scripts]
greet-service = "server:main"
